# fired

./: .gitignore  Cargo.toml  README.md
examples/: data.rs  data.txt
log/: Cargo.toml
log/src/: lib.rs  logger.rs
nero/: Cargo.toml
nero/benches/: feature_access.rs
nero/src/: batch.rs  dataframe.rs  dynamic.rs  inference.rs  lib.rs  model.rs  project.rs  summary.rs  training.rs
src/: main.rs
