[package]
name = "nero"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ndarray = "0.16.1"
polars = { version = "0.41", features = ["lazy", "random", "json", "csv"] }
rand = "0.8.5"
burn = { version = "0.15", features = ["wgpu", "train", "dataset"] }
burn-dataset = { version = "0.15.0", features = ["dataframe"] }


[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
