[package]
name = "nero"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "feature_access"
harness = false

[dependencies]
log = { version = "0.1.0", path = "../log" }

plotters = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ndarray = "0.16.1"
polars = { version = "0.41", features = ["lazy", "random", "json", "csv"] }
rand = "0.8.5"
burn = { version = "0.15", features = ["wgpu", "train", "dataset"] }
burn-dataset = { version = "0.15.0", features = ["dataframe"] }

# Displaying results
textplots = "0.8.6"
rgb = "0.8.27"
itertools = "0.13.0"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
criterion = "0.5.1"
